Fixed tooltips wrapping issue, new issue with file upload not displaying filename

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -141,9 +141,11 @@ label.info::after{
   padding: 2px;
   display: none;
   position: absolute;
-  width: 100%;
+  width: fit-content;
   overflow-wrap: normal;
   text-overflow: ellipsis;
+  white-space: normal;
+  height: auto;
   z-index: 1;
   box-shadow: 1px 2px 4px rgba(0,0,0,0.2);
   text-align: center;
